--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mercadopago/sdk-js": "^0.0.3",
     "axios": "^1.6.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
