--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@mercadopago/sdk-js": "^0.0.3",
     "autoprefixer": "^10.4.16",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
