--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^4.24.1"
+    "openai": "^4.24.1",
+    "homepage": "https://dbravoc.github.io/letripv1"
+
   }
 }
